# wgmath

./: Cargo.toml  README.md  bundle-wasm-wgrapier.sh
crates/wgcore/: CHANGELOG.md  Cargo.toml  README.md
crates/wgcore-derive/: Cargo.toml
crates/wgcore-derive/src/: lib.rs
crates/wgcore/src/: composer.rs  gpu.rs  hot_reloading.rs  indirect.rs  indirect.wgsl  lib.rs  tensor.rs  timestamps.rs
crates/wgebra/: Cargo.toml  README.md
crates/wgebra/src/geometry/: quat.wgsl  rot2.rs  rot2.wgsl  sim2.wgsl  sim3.wgsl
crates/wgebra/src/linalg/: reduce.wgsl
crates/wgparry/: README.md
crates/wgparry/crates/wgparry2d/: Cargo.toml
crates/wgparry/crates/wgparry3d/: Cargo.toml
crates/wgparry/src/: lib.rs
crates/wgparry/src/bounding_volumes/: aabb.rs  aabb.wgsl  mod.rs
crates/wgparry/src/broad_phase/: brute_force_broad_phase.rs  brute_force_broad_phase.wgsl  lbvh.rs  lbvh.wgsl  mod.rs  narrow_phase.rs  narrow_phase.wgsl
crates/wgparry/src/queries/: contact.rs  contact.wgsl  contact_manifold.wgsl  contact_pfm_pfm.wgsl  contact_pfm_pfm_generic.wgsl  mod.rs  polygonal_feature.rs  polygonal_feature.wgsl  projection.rs  projection.wgsl  ray.rs  ray.wgsl  sat.rs  sat.wgsl  specializations.rs
crates/wgparry/src/queries/gjk/: cso_point.wgsl  epa2.wgsl  epa3.wgsl  gjk.wgsl  mod.rs  voronoi_simplex2.wgsl  voronoi_simplex3.wgsl
crates/wgparry/src/shapes/: ball.rs  ball.wgsl  capsule.rs  capsule.wgsl  cone.rs  cone.wgsl  convex_polyhedron.rs  convex_polyhedron.wgsl  cuboid.rs  cuboid.wgsl  cylinder.rs  cylinder.wgsl  mod.rs  polyline.rs  polyline.wgsl  segment.rs  segment.wgsl  shape.rs  shape.wgsl  shape_fake_cone.wgsl  shape_fake_cylinder.wgsl  tetrahedron.rs  tetrahedron.wgsl  triangle.rs  triangle.wgsl  trimesh.rs  trimesh.wgsl  vtx_idx.rs  vtx_idx.wgsl
crates/wgparry/src/utils/: mod.rs
crates/wgparry/src/utils/radix_sort/: init_indirect_dispatches.wgsl  mod.rs  sort_count.wgsl  sort_reduce.wgsl  sort_scan.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  sorting.wgsl
crates/wgrapier/: README.md
crates/wgrapier/crates/examples2d/: Cargo.toml  all_examples2.rs  balls2.rs  boxes2.rs  boxes_and_balls2.rs  joint_ball2.rs  joint_fixed2.rs  joint_prismatic2.rs  polyline2.rs  primitives2.rs  pyramid2.rs
crates/wgrapier/crates/examples3d/: Cargo.toml  all_examples3.rs  balls3.rs  boxes3.rs  boxes_and_balls3.rs  joint_ball3.rs  joint_fixed3.rs  joint_prismatic3.rs  joint_revolute3.rs  keva3.rs  many_pyramids3.rs  primitives3.rs  pyramid3.rs  trimesh3.rs
crates/wgrapier/crates/wgrapier2d/: Cargo.toml
crates/wgrapier/crates/wgrapier3d/: Cargo.toml
crates/wgrapier/crates/wgrapier3d/examples/: gravity.rs  gravity.wgsl
crates/wgrapier/crates/wgrapier_testbed2d/: Cargo.toml
crates/wgrapier/crates/wgrapier_testbed3d/: Cargo.toml
crates/wgrapier/src/: lib.rs  pipeline.rs
crates/wgrapier/src/dynamics/: body.rs  body.wgsl  coloring.rs  coloring.wgsl  constraint.rs  constraint.wgsl  integrate.rs  integrate.wgsl  joint.rs  joint.wgsl  joint_constraint.wgsl  joint_constraint_builder.wgsl  mod.rs  mprops_update.rs  mprops_update.wgsl  prefix_sum.rs  prefix_sum.wgsl  sim_params.rs  sim_params.wgsl  solver.rs  solver.wgsl  solver_jacobi.rs  solver_jacobi.wgsl  warmstart.rs  warmstart.wgsl
crates/wgrapier/src_testbed/: graphics.rs  lib.rs  ui.rs
crates/wgrapier/src_testbed/backend/: cpu.rs  gpu.rs  mod.rs
