[package]
name = "rapier-examples-2d"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
edition = "2024"

[features]

[dependencies]
rand = "0.9"
Inflector = "0.11"
oorandom = "11"
wgrapier_testbed2d = { path = "../wgrapier_testbed2d" }
wgrapier2d = { path = "../wgrapier2d" }
rapier2d = "0.30.0"
kiss3d = "0.37.1"

[[bin]]
name = "all_examples2"
path = "all_examples2.rs"
