[package]
name = "wgrapier2d"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "Cross-platform 2D rigid-body physics."
homepage = "https://wgmath.rs"
repository = "https://github.com/wgmath/wgmath"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "wgrapier2d"
path = "../../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2"]
dim2 = []

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

wgcore = { version = "0.2", path = "../../../wgcore", features = ["derive"] }
wgebra = { version = "0.2", path = "../../../wgebra" }
wgparry2d = { version = "0.2", path = "../../../wgparry/crates/wgparry2d" }
rapier2d = "0.30" # TODO: should be behind a feature?
num-traits = "0.2"
web-time = "1"

[dev-dependencies]
nalgebra = { version = "0.34", features = ["rand", "glam029"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
kiss3d = "0.37.2"